Update unit test and remove unnecessary files